# ocr-api

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build.py  dummy_module.py  main.py  mock_module.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
http/: OCR Video Frame.http
test/: test_ocr.ipynb  test_ocr_2.ipynb
