[project]
name = "ocr_api"
version = "0.1.0"
description = "OCR API based on Manga Image Translator"
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "GPL-3.0-only"
dependencies = [
    "cython>=3.0.12",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pyinstaller>=6.13.0",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "shapely>=2.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
    "manga-image-translator",
]

[tool.uv.sources]
manga-image-translator = { path = "./manga_image_translator", editable = true }


[tool.setuptools]
py-modules = []
